# sc4-imgui-advanced-lotplop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SC4AdvancedLotPlop.def  Third Party Notices.txt
docs/: cache_schema.sql
src/: AdvancedLotPlopDllDirector.cpp  version.h
src/cache/: CacheBuildOrchestratorBase.h  CacheDatabase.cpp  CacheDatabase.h  LotCacheBuildOrchestrator.cpp  LotCacheBuildOrchestrator.h  LotCacheManager.cpp  LotCacheManager.h  PersistentCache.cpp  PersistentCache.h  PropCacheBuildOrchestrator.cpp  PropCacheBuildOrchestrator.h  PropCacheManager.cpp  PropCacheManager.h
src/exemplar/: ExemplarUtil.cpp  ExemplarUtil.h  IconResourceUtil.cpp  IconResourceUtil.h  PropertyUtil.cpp  PropertyUtil.h
src/filter/: LotFilterer.cpp  LotFilterer.h
src/gfx/: DX11ImageLoader.cpp  DX11ImageLoader.h  DX7ImageLoader.cpp  DX7ImageLoader.h  IconLoader.cpp  IconLoader.h  TextureToPNG.cpp  TextureToPNG.h
src/lots/: AdvancedLotPlopUI.cpp  AdvancedLotPlopUI.h  LotConfigEntry.h  LotConfigTableEntry.cpp  LotConfigTableEntry.h  LotFilterer.cpp  LotFilterer.h
src/proppainter/: CoordinateConverter.cpp  CoordinateConverter.h  PropCacheBuildOrchestrator.cpp  PropCacheBuildOrchestrator.h  PropCacheEntry.h  PropCacheManager.cpp  PropCacheManager.h  PropPainterControlManager.cpp  PropPainterControlManager.h  PropPainterInputControl.cpp  PropPainterInputControl.h  PropPainterUI.cpp  PropPainterUI.h
src/props/: PropCacheEntry.h  PropPainterControlManager.cpp  PropPainterControlManager.h  PropPainterInputControl.cpp  PropPainterInputControl.h  PropPainterUI.cpp  PropPainterUI.h
src/s3d/: FSHReader.cpp  FSHReader.h  FSHStructures.h  QFSDecompressor.cpp  QFSDecompressor.h  S3DEnumMappings.h  S3DReader.cpp  S3DReader.h  S3DRenderer.cpp  S3DRenderer.h  S3DShaders.h  S3DStructures.h  S3DThumbnailGenerator.cpp  S3DThumbnailGenerator.h
src/services/: IconLoadingService.cpp  IconLoadingService.h  LotCacheManager.cpp  LotCacheManager.h  LotFilterService.cpp  LotFilterService.h  LotPlopService.cpp  LotPlopService.h  WindowManager.cpp  WindowManager.h
src/ui/: AdvancedLotPlopUI.cpp  AdvancedLotPlopUI.h  ImGuiLifecycleManager.cpp  ImGuiLifecycleManager.h  LotConfigEntry.h  LotConfigTableEntry.cpp  LotConfigTableEntry.h
src/utils/: CacheSerializer.cpp  CacheSerializer.h  Config.cpp  Config.h  CoordinateConverter.cpp  CoordinateConverter.h  D3D11Hook.cpp  D3D11Hook.h  D3D7Hook.cpp  D3D7Hook.h  ImGuiLifecycleManager.cpp  Logger.cpp  Logger.h  ShortcutManager.cpp  ShortcutManager.h
